# AI-model-created-C-

./: CMakeLists.txt  README.md  code.txt  main.cpp
AI3700/: README.md  code.txt  main.cpp
AI3700/docs/: README_en.md  REAMD_ch.md
AI3700/src/: file_utils.cpp  hanzi_encoder.cpp  hanzi_encoder.h  matrix.cpp  matrix.h  rnn_model.cpp  rnn_model.h  start_model.cpp  start_model.h
src/: file_utils.h  matrix.cpp  matrix.h  rnn_model.cpp  rnn_model.h  start_model.cpp  start_model.h
